Fixes squished icons

--- a/app/public/stylesheets/aro.css
+++ b/app/public/stylesheets/aro.css
@@ -105,7 +105,7 @@ html, body, #map-canvas, #map-canvas-wrapper {
   padding: 10px;
   height: 100%;
   max-height: 100%;
-  overflow: scroll;
+  overflow: hidden;
 }
 
 .map-tool-wrapper {
